--- a/src/layouts/MainLayout.css
+++ b/src/layouts/MainLayout.css
@@ -25,7 +25,7 @@
 
 @media (max-width: 768px) {
   .topbar {
-    flex-direction: column;
+    flex-direction: row;
     gap: 1rem;
     position: absolute;
   }
@@ -34,7 +34,6 @@
 .mainContent {
   flex: 1;
   padding: 1rem;
-  padding-top: 110px; /* Espacio para el topbar fijo */
   max-width: 1280px;
   margin: 0 auto;
   width: 100%;
