--- a/src/pages/Home/Intro/Intro.module.css
+++ b/src/pages/Home/Intro/Intro.module.css
@@ -58,3 +58,17 @@ main h2 {
   line-height: 1.1;
 }
 
+button {
+  background-color: #f4ce14;
+  border: none;
+  border-radius: 16px;
+  padding: 1rem 2rem;
+  font-size: 1.1rem;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #e0c511;
+}
